<resources>
    <string name="app_name">To-do List</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="Add_new_item">Add a new item</string>
    <string name="Add_button">Add</string>
    <string name="edit_item_desc">Edit item description:</string>
    <string name="edit_item_pri">Edit priority:</string>
    <string name="priority">Priority:</string>
    <string name="Save_button">Save</string>
    <string name="pick_date">Pick a due date</string>
    <string name="edit_item">Edit Item</string>
    <string name="item_suc_edited">Item successfully edited</string>
    <string name="item_suc_added">Item successfully added</string>
    <string name="item_suc_deleted">Item successfully deleted</string>

</resources>
